# handlers/get.go
@@ -14,6 +14,7 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
+	rw.Header().Add("Content-Type", "application/json")
 
 	prods := data.GetProducts()
 
@@ -24,7 +25,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -33,7 +34,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
-
+	rw.Header().Add("Content-Type", "application/json")
 	p.l.Println("[DEBUG] get record id", id)
 
 	prod, err := data.GetProductByID(id)
